[project]
name = "hse-advanced-real-analysis"
version = "0.1.0"
description = "Repository with practical assignments for the Advanced Real Analysis course (HSE AMI track)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Timur Lidzhiev", email = "trlidzhiev@gmail.ru" }
]
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
]
